{
    "name": "InputSystem",
    "maps": [
        {
            "name": "GameActions",
            "id": "30f6dc21-24b7-4d93-ad41-29f36a810f20",
            "actions": [
                {
                    "name": "MoveShip",
                    "type": "Value",
                    "id": "c38693ad-c2ae-40fd-886e-7aaac2963bf3",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveShield",
                    "type": "Value",
                    "id": "8e84720e-3ffa-4440-8446-15c9cffc0037",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpgradeTurret",
                    "type": "Button",
                    "id": "b41a2ff3-1eb9-4645-8d14-3411df66f86d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpgradeBullet",
                    "type": "Button",
                    "id": "f3c93416-b258-4e28-ac3b-edc57a80a77d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpgradeHealth",
                    "type": "Button",
                    "id": "da52ef42-2ac0-4ec1-be7c-57cb703a3375",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Value",
                    "id": "340e50ff-34d9-41bf-803c-7a3cf71a3310",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "5ff493d4-4eae-4637-adaa-651b35c893d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitMenu",
                    "type": "Button",
                    "id": "1421a81c-2b6d-409b-8ed0-1a67ccf6c94d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "804c8413-6d96-41bf-9802-690418135ff8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad8d8172-9e76-4127-a472-c0e5f0b4da3c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveShield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7372300d-b6a4-4679-9901-334e1913429d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UpgradeTurret",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bf12e0c-1369-4f2e-b2ea-82baa11fbf0e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UpgradeBullet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba57e988-ba94-4465-9323-68be227ddbe0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UpgradeHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f2465cc-9a45-4ce4-9136-298e208ef580",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfa7d520-0a38-40d0-909d-67feb2d7928d",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4aa9588c-b2d8-42d4-b7df-731fd7ce59f9",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}